21 Aug 2017 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Release 0.0.10, 0.0.11, 0.0.12
	* Update api response format

17 Aug 2017 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Release 0.0.8 and 0.0.9
	* Add csrfToken as optional argument

21 Jul 2017 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Release 0.0.6 and 0.0.7
	* Fix canvas asset url replacing
	* Improve minimap height calculation

17 Jul 2017 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Release 0.0.5
	* Make configuration simple

14 Jul 2017 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Release 0.0.3 and 0.0.4
	* Fix dependency <style> tag
	* Update Request Headers

12 Jul 2017 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Release 0.0.2 and 0.0.1
	* Add empty response handling
	* Initial commit