@@ -115,16 +115,16 @@ function buildHTML(data, elements, styles) {
   html += Array.from(elements).map((e) => {
     let n = document.importNode(e, true);
     if (n.nodeName !== 'IMG') {
-      if (n.nodeName === 'P' && Array.isArray(data['p'])) {
+      if (n.nodeName === 'P' && 'p' in data) {
         // BETA only paragraph support
         let v = data['p'][String(pIndex)];
         if (v !== undefined) {
-          let color;
+          let color = '#ffffff';
           try {
-            i = parseInt(parseFloat(v) * 10, 10)
-            color = shadeColor(colors[i], 0.5);
+            let i = Math.round(parseFloat(v) * 10);
+            color = shadeColor(colors[i], 0.55);
           } catch(_e) {
-            color = '#ffffff';
+            console.error(e);
           }
           n.style.background = color;
           n.style.backgroundColor = 'rgba(' + color + ', 0.9)';
