@@ -1,5 +1,6 @@
 21 Aug 2017 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
 	* Release 0.0.10, 0.0.11, 0.0.12
+	* Update color rendering (Math.round)
 	* Update api response format
 
 17 Aug 2017 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
